# API_Rest_Postgres

./: README.md  pyproject.toml
src/: server.py
src/config/: database.py
src/models/: provas_model.py  resultados_model.py
src/routes/: provas_routes.py  resultados_routes.py
