[tool.poetry]
name = "restapi-postgres"
version = "0.1.0"
description = ""
authors = ["joao_goroncy@outlook.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
sqlmodel = "^0.0.12"
psycopg2-binary = "^2.9.9"
uvicorn = "^0.24.0.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"